tests/NormalTests/paczka1/fuzzy1/85074828.err
Error in line 3: wcr A852 27,4
Error in line 5: YikPSIzkZ A852 60,24
Error in line 12: YikPSIzkZ S130 73,2
Error in line 11: S130 A852 85,8
Error in line 14: YikPSIzkZ A801 49,7
Error in line 32: wcr S130 38,3
